<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:icon="@drawable/ic_home"
            android:title="@string/app_name"/>
        <item
            android:id="@+id/add_item"
            android:icon="@drawable/ic_add_item"
            android:title="@string/add_item" />
        <item
            android:id="@+id/buy_item"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/buy_item" />
        <item
            android:id="@+id/sell_item"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sell_item" />
        <item
            android:id="@+id/control_items"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/control_items" />
        <item
            android:id="@+id/exchange_items"
            android:icon="@drawable/ic_exchange_items"
            android:title="@string/exchange_items"/>
    </group>

</menu>
