<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:text="pasvalkov"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/enter_login"
        app:layout_constraintTop_toBottomOf="@+id/enter_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onEnter"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/enter_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/enter_registration_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:onClick="onRegistration"
        app:layout_constraintStart_toStartOf="@+id/enter_btn"
        app:layout_constraintTop_toBottomOf="@+id/enter_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/enter_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_registration_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.85" />


</android.support.constraint.ConstraintLayout>
